--- a/chainflip-monitor.service
+++ b/chainflip-monitor.service
@@ -5,8 +5,8 @@ After=network.target
 [Service]
 Type=simple
 User=root
-WorkingDirectory=/opt/chainflip-monitor
-ExecStart=/usr/bin/node src/index.js
+WorkingDirectory=/root/chainflip-monitor
+ExecStart=node src/index.js
 Restart=always
 RestartSec=10
 Environment=NODE_ENV=production
