code node version

--- a/chainflip-monitor.service
+++ b/chainflip-monitor.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=root
 WorkingDirectory=/root/chainflip-monitor-bot
-ExecStart=node src/index.js
+ExecStart=/root/.nvm/versions/node/v23.5.0/bin/node src/index.js
 Restart=always
 RestartSec=10
 Environment=NODE_ENV=production
