--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-telegram-bot-api": "^0.61.0",
     "node-schedule": "^2.1.1",
     "check-disk-space": "^3.4.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "node-fetch": "^2.6.7"
   }
 } 
